WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279027
rawBlockBuffer can be leaked if the setting fails
https://bugs.webkit.org/show_bug.cgi?id=279027
Summary
rawBlockBuffer can be leaked if the setting fails
Seija K.
Reported
2024-09-02 10:25:55 PDT
It needs to be assigned to a retainPtr.
Attachments
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2024-09-02 11:18:57 PDT
PR -
https://github.com/WebKit/WebKit/pull/33037
EWS
Comment 2
2024-09-03 10:21:50 PDT
Committed
283101@main
(9b0cf46ee479): <
https://commits.webkit.org/283101@main
> Reviewed commits have been landed. Closing PR #33037 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-03 10:24:55 PDT
<
rdar://problem/135206714
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug