[WebCore] Release rawBlockBuffer if CMSampleBufferSetDataBuffer fails https://bugs.webkit.org/show_bug.cgi?id=279027

Reviewed by Said Abou-Hallawa.

rawBlockBuffer can end up being leaked if CMSampleBufferSetDataBuffer
fails, so just use adoptCF to ensure it is always freed.

* Source/WebCore/platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
  (WebCore::ImageDecoderAVFObjC::createFrameImageAtIndex): Assign
  rawBlockBuffer to a RetainPtr.

Canonical link: https://commits.webkit.org/283101@main